[package]
name = "tun-benchmark2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tun-rs = { version = "2.5.1", features = ["async","async_framed"] }
futures = "0.3"
pnet_packet = "0.35.0"
clap = { version = "4.5.40", features = ["derive"] }
bytes = "1.10.1"
ctrlc2 = { version = "3", features = ["tokio", "termination"] }

[[bin]]
name = "tun-rs-async-normal"
path = "src/tun-rs-async-normal.rs"
[[bin]]
name = "tun-rs-async-normal-channel"
path = "src/tun-rs-async-normal-channel.rs"
[[bin]]
name = "tun-rs-async-framed"
path = "src/tun-rs-async-framed.rs"
[[bin]]
name = "tun-rs-async-gso"
path = "src/tun-rs-async-gso.rs"
[[bin]]
name = "tun-rs-async-gso-channel"
path = "src/tun-rs-async-gso-channel.rs"
[[bin]]
name = "tun-rs-async-gso-channel-pool"
path = "src/tun-rs-async-gso-channel-pool.rs"
[[bin]]
name = "tun-rs-async-gso-framed"
path = "src/tun-rs-async-gso-framed.rs"

[[bin]]
name = "tun-rs-sync-normal"
path = "src/tun-rs-sync-normal.rs"
[[bin]]
name = "tun-rs-sync-normal-channel"
path = "src/tun-rs-sync-normal-channel.rs"
[[bin]]
name = "tun-rs-sync-gso"
path = "src/tun-rs-sync-gso.rs"
[[bin]]
name = "tun-rs-sync-gso-channel"
path = "src/tun-rs-sync-gso-channel.rs"

[[bin]]
name = "tun-rs-sync-gso-concurrent"
path = "src/tun-rs-sync-gso-concurrent.rs"
